--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-  <title>Aggiungi Cavallo - Ippodromo NO₂</title>
+  <title>Aggiungi Cavallo - Ippodromo NO₂¯</title>
   <meta name="title" content="aggiungi-gara" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -28,7 +28,7 @@
       </nav>
       <ul id="breadcrumb">
         <li><span lang="en">Dashboard</span> amministratore</li>
-        <li>Gestici cavalli</li>
+        <li>Gestisci cavalli</li>
         <li>Aggiungi Cavallo</li>
       </ul>
     </div>
@@ -47,8 +47,23 @@
         placeholder="Inserire una breve descrizione del cavallo" required></textarea>
     </main>
     <footer>
-      <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
-      <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
+      <div id="copyright">
+        <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+        <p>
+          Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
+        </p>
+        <div id="authors">
+          I tuoi padroni:
+          <ul>
+            <li>Cecio</li>
+            <li>Dam</li>
+            <li>Martz</li>
+            <li>Sam</li>
+          </ul>
+        </div>
+     </div>
+    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
     </footer>
   </div>
 </body>
