--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    <nome-cavallo /> - Ippodromo NO₂
+    <nome-cavallo /> - Ippodromo NO₂¯
   </title>
   <meta-title-cavallo />
   <meta name="description" content="" />
@@ -54,15 +54,21 @@
       </div>
     </main>
     <footer>
-
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
-
-      <ul>
-        <li>Sam</li>
-        <li>Dam</li>
-        <li>Martz</li>
-      </ul>
-
+      <div id="copyright">
+        <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
+        <p>
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
+        </p>
+        <div id="authors">
+          Quelli che si pigliano i tuoi soldi:
+          <ul>
+            <li>Cecio</li>
+            <li>Dam</li>
+            <li>Martz</li>
+            <li>Sam</li>
+          </ul>
+        </div>
+      </div>
       <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
       <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
     </footer>
