--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-  <title>Ippodromo NO₂</title> <!-- nitrito hihihihi -->
+  <title>Ippodromo NO₂¯</title> <!-- nitrito hihihihi -->
   <meta name="title" content="Ippodromo" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
@@ -23,8 +23,6 @@
   <div class="page">
 
     <div class="navbar">
-        <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-
       <nav id="menu">
         <ul>
           <li lang="en">Home</li>
@@ -35,56 +33,63 @@
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
         </ul>
       </nav>
-      
+
       <ul id="breadcrumb">
-          <li lang="en">Home</li>
+        <li lang="en">Home</li>
       </ul>
     </div>
 
     <main>
-        <dl id="home-content" class="content">
-          <div class="dl-element center-element">
-            <!-- left/right si puó mettere come id se serve -->
-            <dt>cose ippodromo</dt>
-            <dd class="flex-home">
-              <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna del nostro ippodromo" />
-              <p>blah blah</p>
-            </dd>
-          </div>
-          <div class="dl-element">
-            <dt>Scommesse</dt>
-            <dd>
-              <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non é molto di contenuto -->
-              <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
-            </dd>
-          </div>
-          <div class="dl-element">
-            <dt>Valuta virtuale: Cookies</dt>
-            <dd>
-              <img src="images/cookies.jps" alt="Il simbolo della moneta é un bisotto" />
-              <!-- non so se vada messa, non é molto di contenuto -->
-              <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
-                Otterrai
-                non so quanti cookies gratuiti se decidi di registrarti!</p>
-            </dd>
-          </div>
-        </dl>
+      <dl id="home-content" class="content">
+        <div class="dl-element center-element">
+          <!-- left/right si puó mettere come id se serve -->
+          <dt>cose ippodromo</dt>
+          <dd class="flex-home">
+            <img src="images/ippodromo.jpg" class="imgContent center-element"
+              alt="Vista aerea notturna del nostro ippodromo" />
+            <p>blah blah</p>
+          </dd>
+        </div>
+        <div class="dl-element">
+          <dt>Scommesse</dt>
+          <dd>
+            <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non è molto di contenuto -->
+            <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
+          </dd>
+        </div>
+        <div class="dl-element">
+          <dt>Valuta virtuale: Cookies</dt>
+          <dd>
+            <img src="images/cookies.jps" alt="Il simbolo della moneta è un bisotto" />
+            <!-- non so se vada messa, non è molto di contenuto -->
+            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
+              Otterrai
+              non so quanti cookies gratuiti se decidi di registrarti!</p>
+          </dd>
+        </div>
+      </dl>
     </main>
 
     <footer>
-      <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
-
-      <ul>
-        <li>Sam</li>
-        <li>Dam</li>
-        <li>Martz</li>
-      </ul>
-
+      <div id="copyright">
+        <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
+        <p>
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
+        </p>
+        <div id="authors">
+          Quelli che si pigliano i tuoi soldi:
+          <ul>
+            <li>Cecio</li>
+            <li>Dam</li>
+            <li>Martz</li>
+            <li>Sam</li>
+          </ul>
+        </div>
+      </div>
       <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
       <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" />
     </footer>
   </div>
-  <!-- TODO aggiungi footer dappertutto -->
 </body>
 
 </html>
