--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -2,8 +2,8 @@
 <html lang="it">
 
 <head>
-  <title>Dashboard amministratore - Ippodromo NO₂</title> <!-- oppure &#8322; -->
-  <meta name="title" content="Dashboard amministratore - Ippodromo NO₂" />
+  <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
+  <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
@@ -33,7 +33,7 @@
 
   <main>
     <nav>
-      <!-- questa cosa va mostrata solo se si é loggati, se non lo si é bisogna reindirizzare al login -->
+      <!-- questa cosa va mostrata solo se si è loggati, se non lo si è bisogna reindirizzare al login -->
       <dl id="db-cards">
         <!-- aggiungere delle icone in css -->
         <dt>
@@ -43,7 +43,7 @@
           <p>
             <num-cavalli />
           </p>
-          <p><a href="gestisciCavalli.php">Gestici i cavalli</a></p>
+          <p><a href="gestisciCavalli.php">Gestisci i cavalli</a></p>
         </dd>
       </dl>
       <dt>
@@ -68,10 +68,23 @@
     </nav>
   </main>
   <footer>
+    <div id="copyright">
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <p>
+        Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
+      </p>
+      <div id="authors">
+        I tuoi padroni:
+        <ul>
+          <li>Cecio</li>
+          <li>Dam</li>
+          <li>Martz</li>
+          <li>Sam</li>
+        </ul>
+      </div>
+    </div>
     <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
     <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
-    <!-- cambiare src dopo aver validato -->
-    boh info varie su noi che non ricordo quali fossero ma si posso aggiungere
   </footer>
   </div>
 </body>
