--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-  <title>Aggiungi Gara - Ippodromo NO₂</title>
+  <title>Aggiungi Gara - Ippodromo NO₂¯</title>
   <meta name="title" content="aggiungi-gara" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -79,9 +79,24 @@
       </form>
     </main>
     <footer>
-      <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
-      <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
-    </footer>
+        <div>
+          <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+          <p>
+            Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
+          </p>
+          <div>
+            I tuoi padroni:
+            <ul>
+              <li>Cecio</li>
+              <li>Dam</li>
+              <li>Martz</li>
+              <li>Sam</li>
+            </ul>
+          </div>
+        </div>
+        <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+        <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+      </footer>
   </div>
   </body>
 
