--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-  <title>Inserisci risultati - Ippodromo NO₂</title>
+  <title>Inserisci risultati - Ippodromo NO₂¯</title>
   <meta name="title" content="inserisci-risultati" />
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -58,9 +58,24 @@
       </form>
     </main>
     <footer>
-      <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
-      <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" /> <!-- cambiare src dopo aver validato -->
-    </footer>
+    <div id="copyright">
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <p>
+        Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
+      </p>
+      <div id="authors">
+        I tuoi padroni:
+        <ul>
+          <li>Cecio</li>
+          <li>Dam</li>
+          <li>Martz</li>
+          <li>Sam</li>
+        </ul>
+      </div>
+    </div>
+    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+  </footer>
   </div>
 </body>
 
