--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -2,7 +2,7 @@
 <html lang="it">
 
 <head>
-  <title>Classifica gara - Ippodromo NO₂</title>
+  <title>Classifica gara - Ippodromo NO₂¯</title>
   <meta-title-gara /> <!-- TODO aggiornare php non cambia i tag meta -->
   <meta name="description" content="" />
   <meta name="keywords" content="" />
@@ -51,16 +51,23 @@
     </main>
 
     <footer>
-        <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
-
+      <div id="copyright">
+        <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
+        <p>
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
+        </p>
+        <div id="authors">
+          Quelli che si pigliano i tuoi soldi:
           <ul>
-            <li>Sam</li>
+            <li>Cecio</li>
             <li>Dam</li>
             <li>Martz</li>
+            <li>Sam</li>
           </ul>
-
-      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido"/>
-      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido"/>
+        </div>
+      </div>
+      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
     </footer>
   </div>
 </body>
