--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css"
     media="handheld, screen and (max-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+  <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
 <body>
