--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -7,7 +7,8 @@
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css"
+    media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
@@ -47,8 +48,8 @@
         placeholder="Inserire una breve descrizione del cavallo" required></textarea>
     </main>
     <footer>
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
       <div id="copyright">
-        <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
         <p>
           Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
         </p>
@@ -61,9 +62,9 @@
             <li>Sam</li>
           </ul>
         </div>
-     </div>
-    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
-    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+      </div>
+      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
     </footer>
   </div>
 </body>
