--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -54,7 +54,7 @@
       <p><a href="../../"> Torna Indietro </a></p>
     </main>
     <footer>
-      <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
       <div id="copyright">
         <p>
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
