--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -5,7 +5,7 @@
   <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css"
     media="handheld, screen and (max-width: 1025px)" />
