--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
