Aggiunto contenuto index

--- a/html/index.html
+++ b/html/index.html
@@ -43,18 +43,22 @@
       <dl id="home-content" class="content">
         <div class="dl-element center-element">
           <!-- left/right si puó mettere come id se serve -->
-          <dt>cose ippodromo</dt>
+          <dt>Il nostro ippodromo</dt>
           <dd class="flex-home">
             <img src="images/ippodromo.jpg" class="imgContent center-element"
               alt="Vista aerea notturna del nostro ippodromo" />
-            <p>blah blah</p>
+            <p>
+              Questo ippodromo nasce come pista per corse clandestine di lucertole, ma col tempo i soldi che abbiamo ottenuto dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
+            </p>
           </dd>
         </div>
         <div class="dl-element">
           <dt>Scommesse</dt>
           <dd>
             <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non è molto di contenuto -->
-            <p>qui puoi fare scommesse in tempo reale ecc. ecc.</p>
+            <p>
+              Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
+            </p>
           </dd>
         </div>
         <div class="dl-element">
@@ -62,9 +66,7 @@
           <dd>
             <img src="images/cookies.jps" alt="Il simbolo della moneta è un bisotto" />
             <!-- non so se vada messa, non è molto di contenuto -->
-            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario.
-              Otterrai
-              non so quanti cookies gratuiti se decidi di registrarti!</p>
+            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!</p>
           </dd>
         </div>
       </dl>
@@ -94,7 +96,7 @@
       <img id="img-valid-code" src="images/valid-xhtml10.png" alt="HTML valido" />
       <img id="img-valid-css" src="images/vcss-blue.gif" alt="CSS valido" />
     </footer>
-
+  </div>
 </body>
 
 </html>
