fix p outstanding in footer & small.css

--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -55,7 +55,7 @@
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
         </p>
         <div id="authors">
-          Quelli che si pigliano i tuoi soldi:
+          <p>Quelli che si pigliano i tuoi soldi:</p>
           <ul>
             <li>Cecio</li>
             <li>Dam</li>
