--- a/html/index.html
+++ b/html/index.html
@@ -83,7 +83,7 @@
         </p>
         
         <div id="authors">
-          Quelli che si pigliano i tuoi soldi:
+          <p>Quelli che si pigliano i tuoi soldi:</p>
           <ul>
             <li>Cecio</li>
             <li>Dam</li>
