--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -75,7 +75,7 @@
           Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
         </p>
         <div id="authors">
-          I tuoi padroni:
+          <p>I tuoi padroni:</p>
           <ul>
             <li>Cecio</li>
             <li>Dam</li>
