--- a/html/index.html
+++ b/html/index.html
@@ -40,9 +40,7 @@
     </div>
 
     <main>
-      <dl id="home-content" class="content">
-        <div class="dl-element center-element">
-          <!-- left/right si puó mettere come id se serve -->
+      <dl id="home-content" class="content center-element">
           <dt>Il nostro ippodromo</dt>
           <dd class="flex-home">
             <img src="images/ippodromo.jpg" class="imgContent center-element"
@@ -51,24 +49,21 @@
               Questo ippodromo nasce come pista per corse clandestine di lucertole, ma col tempo i soldi che abbiamo ottenuto dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
             </p>
           </dd>
-        </div>
-        <div class="dl-element">
-          <dt>Scommesse</dt>
-          <dd>
-            <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non è molto di contenuto -->
-            <p>
+        <dt>Scommesse</dt>
+        <dd>
+          <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non è molto di contenuto -->
+          <p>
               Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
-            </p>
-          </dd>
-        </div>
-        <div class="dl-element">
-          <dt>Valuta virtuale: Cookies</dt>
-          <dd>
-            <img src="images/cookies.jps" alt="Il simbolo della moneta è un bisotto" />
+          </p>
+        </dd>
+        <dt>Valuta virtuale: Cookies</dt>
+        <dd>
+          <img src="images/cookies.jps" alt="Il simbolo della moneta è un bisotto" />
             <!-- non so se vada messa, non è molto di contenuto -->
-            <p>Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!</p>
-          </dd>
-        </div>
+          <p>
+            Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
+          </p>
+        </dd>
       </dl>
     </main>
 
@@ -76,10 +71,7 @@
       <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
       <div id="copyright">
         <p>
-          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le
-          vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro.
-          L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte
-          dell'utente; al contrario, si prende con gioia tutto il capitale.
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
         </p>
         
         <div id="authors">
