Feeback all'aggiunta cavallo

--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -34,6 +34,7 @@
       </ul>
     </div>
     <main>
+      <risultato-inserimento />
       <form method="post" action="../../php/Admin/aggiungiCavallo.php" id="inserimentoCavallo"
         enctype="multipart/form-data">
         <h1>Inserisci i dati riguardanti il nuovo cavallo!</h1>
