--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
-  <title>Login</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+  <title>Login - Ippodromo NO₂¯</title>
+  <meta name="title" content="Login - Ippodromo" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css"
-    media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
@@ -17,37 +20,40 @@
 
   <div class="page">
     <div class="navbar">
-      <ul id="breadcrumb">
-        <li lang="eng">Home</li>
-        <li>Risultati gare</li>
-      </ul>
       <nav id="menu">
         <ul>
           <li lang="en"><a href="../../index.php">Home</a></li>
           <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-
+          <li>Login</li>
           <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
         </ul>
       </nav>
+      <ul id="breadcrumb">
+        <li lang="eng">Home</li>
+        <li>Risultati gare</li>
       </ul>
     </div>
 
     <main>
-    <form method="post" name="Form" action="login.php">
-      <h1>Login</h1>
-      <input type="text" id="username" placeholder="Username" name="username" required>
-      <input type="password" id="password" placeholder="Password" name="password" required>
-      <button type="submit" name="login">Accedi</button>
-    </form>
-    <p><a href="../../"> Torna Indietro </a></p>
+      <form method="post" name="Form" action="login.php">
+        <h1>Login</h1>
+        <input type="text" id="username" placeholder="Username" name="username" required>
+        <input type="password" id="password" placeholder="Password" name="password" required>
+        <button type="submit" name="login">Accedi</button>
+      </form>
+      <p><a href="../../"> Torna Indietro </a></p>
     </main>
+    
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
       <div id="copyright">
         <p>
-          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le
+          vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro.
+          L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte
+          dell'utente; al contrario, si prende con gioia tutto il capitale.
         </p>
         <div id="authors">
           <p>Quelli che si pigliano i tuoi soldi:</p>
