--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -3,55 +3,56 @@
 
 
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
-  <script type="text/javascript" src="../../script/controlli.js"></script>
+  <title>Registrazione - Ippodromo NO₂¯</title>
+  <meta name="title" content="Registrazione - Ippodromo" />
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css"
-    media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
 <body>
+  <header>
+    <h1>Registrati</h1>
+  </header>
+
   <div class="page">
     <div class="navbar">
-      <div id="breadcrumb">
-
-        <ul>
-          <li lang="en">Home</li>
-        </ul>
-      </div>
-
       <nav id="menu">
         <ul>
-          <li lang="en">Home</li>
-          <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-          <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li><a href='php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <admin />
-          <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
+          <li lang="en"><a href="../..">Home</a></li>
+          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
+          <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../../php/Autenticazione/login.php">Login</a></li>
+          <li>Registrati</li>
         </ul>
       </nav>
+    
+      <ul id="breadcrumb">
+        <li lang="en">Home</li>
+        <li>Registrazione</li>
+      </ul>
     </div>
 
     <main>
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register">
-        <h1>Registrazione</h1>
+        <h2>Registrazione</h2>
         <input type="text" id="username" placeholder="Nome Utente" name="username" maxlength="50" required>
         <input type="password" id="password" placeholder="Password" name="password" minlength="6" required>
         <input type="text" id="name" placeholder="Nome" name="name" maxlength="50" required>
         <input type="text" id="surname" placeholder="Cognome" name="surname" maxlength="50" required>
-
         <input type="date" id="date" placeholder="Data di Nascita" name="date" required>
-
         <input type="text" id="address" placeholder="Indirizzo" name="address" maxlength="50" required>
         <input type="text" id="city" placeholder="Città" name="city" maxlength="50" required>
-        <input type="text" id="mail" placeholder="Mail" name="mail"
-          pattern="[a-zA-Z0-9]+[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]{0,}[a-zA-Z0-9]{0,}@[a-zA-Z0-9]{3,}\.[a-zA-Z]{2,3}$"
-          maxlength="50" required>
+        <input type="text" id="mail" placeholder="Mail" name="mail" pattern="[a-zA-Z0-9]+[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]{0,}[a-zA-Z0-9]{0,}@[a-zA-Z0-9]{3,}\.[a-zA-Z]{2,3}$" maxlength="50" required>
 
         <button type="submit" name="register">Registrati</button>
       </form>
-      <p><a href="../../"> Torna Indietro </a></p>
+      <p class="centerLink"><a href="../../"> Torna Indietro </a></p>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
