Creata pagina "chi siamo", aggiunta ultima immagine index, aggiornati alcuni tag meta in admin
Non so cosa scrivere in chi siamo quindi per ora é vuoto
il link per l'inserimento di un cavallo o di una gara nell pannello admin non funziona

--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Inserisci risultati - Ippodromo NO₂¯</title>
-  <meta name="title" content="inserisci-risultati" />
+  <meta name="title" content="inserisci risultati - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <noscript>
@@ -29,6 +29,7 @@
           <li lang="en"><a href="admin.php">Dashboard</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
         </ul>
@@ -44,7 +45,7 @@
         <inserimento-gara-selezionata />
     </main>
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
@@ -52,6 +53,7 @@
         <div id="authors">
           I tuoi padroni:
           <ul>
+            <li>Cecio</li>
             <li>Dam</li>
             <li>Martz</li>
             <li>Sam</li>
