--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>Registrazione - Ippodromo NO₂¯</title>
-  <meta name="title" content="Registrazione - Ippodromo" />
+  <meta name="title" content="Registrazione - Ippodromo NO₂¯" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -27,6 +27,7 @@
           <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../php/Autenticazione/login.php">Login</a></li>
           <li>Registrati</li>
         </ul>
@@ -55,7 +56,7 @@
       <p class="centerLink"><a href="../../"> Torna Indietro </a></p>
     </main>
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
