--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Ippodromo NO₂¯</title> <!-- nitrito hihihihi -->
-  <meta name="title" content="Ippodromo" />
+  <meta name="title" content="Ippodromo NO₂¯" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     <h1>Ippodromo NO₂¯</h1>
   </header>
 
-  <img class="topPic" src="images/ippopodromo.jpg" alt="vista ippodromo" /> <!-- mnettere come contenuto -->
+  <img class="topPic" src="images/ippopodromo.jpg" alt="vista Ippodromo NO₂¯" />
 
   <div class="page">
 
@@ -29,6 +29,7 @@
           <li><a href='php/Scommetti/scommetti.php'>Scommesse</a></li>
           <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="php/info/chi_siamo.php">Chi siamo</a></li>
           <admin />
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
         </ul>
@@ -43,23 +44,21 @@
       <dl id="home-content" class="content center-element">
           <dt>Il nostro ippodromo</dt>
           <dd class="flex-home">
-            <img src="images/ippodromo.jpg" class="imgContent center-element"
-              alt="Vista aerea notturna del nostro ippodromo" />
+            <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna del nostro Ippodromo NO₂¯" />
             <p>
-              Questo ippodromo nasce come pista per corse clandestine di lucertole, ma col tempo i soldi che abbiamo ottenuto dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
+              Questo ippodromo nasce come pista per corse clandestine di ippopotami, ma col tempo i soldi che abbiamo rubato dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
             </p>
           </dd>
         <dt>Scommesse</dt>
         <dd>
-          <img src="images/scommesse.jpg" alt="" /> <!-- non so se vada messa, non è molto di contenuto -->
+          <img src="images/gambling_horses.jpg" class="imgContent center-element" alt="" />
           <p>
               Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
           </p>
         </dd>
         <dt>Valuta virtuale: Cookies</dt>
         <dd>
-          <img src="images/cookies.jps" alt="Il simbolo della moneta è un bisotto" />
-            <!-- non so se vada messa, non è molto di contenuto -->
+          <img src="images/bitsquit.png" alt="Un bisotto in 8 bit, simbolo della valuta" />
           <p>
             Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
@@ -68,7 +67,7 @@
     </main>
 
     <footer>
-      <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
