--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -23,6 +23,7 @@
           <li lang="en">Dashboard</li>
           <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
         </ul>
@@ -67,7 +68,7 @@
       </nav>
     </main>
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
