--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -2,12 +2,12 @@
 <html lang="it">
 
 <head>
-  <title>Pannello amministratore - Ippodromo NO₂</title> <!-- oppure &#8322; -->
-  <meta name="title" content="Pannello amministratore - Ippodromo NO₂" />
+  <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
+  <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="style/small.css" media="" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
@@ -15,56 +15,76 @@
 
 <body>
   <header>
-    <div id="breadcrumb"> <!-- potrebbe essere inutile dato dato che non abbiamo molto da andare in profonditá-->
-      <ul>
-        <li lang="en">Pannello amministratore</li>
+    <h1><span lang="en">Dashboard</span> amministratore</h1>
+  </header>
+  <div class="page">
+    <div class="navbar">
+      <nav id="menu">
+        <ul>
+          <li lang="en">Dashboard</li>
+          <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
+          <li><a href="../../">Abbandona dashboard</a></li>
+          <autenticazione />
+        </ul>
+      </nav>
+      <ul id="breadcrumb">
+        <li><span lang="en">Dashboard</span> amministratore</li>
       </ul>
     </div>
-    <nav id="menu">
-      <ul>
-        <li>Dashboard</li>
-        <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-        <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-        <li><a href="../../index.php">Abbandona pannello</a></li>
-        <autenticazione />
-      </ul>
-    </nav>
-    <img src="../../images/logo.jpg" alt="logo ippodromo rimuovi questo alt" />
-  </header>
-  <main>
-    <nav> <!-- questa cosa va mostrata solo se si é loggati, se non lo si é bisogna reindirizzare al login --> 
-      <dl id="db-cards">
-        <dt>
-          <h2>Cavalli</h2>
-        </dt>
-        <dd>
-          <p><num-cavalli /></p>
-          <p><a href="../../php/Admin/gestisciCavalli.php">Gestici i cavalli</a></p>
-        </dd>
-      </dl>
-        <dt>
-          <h2>Gare</h2>
-        </dt>
-        <dd>
-          <p><num-gare /></p>
-          <p><a href="../../php/admin/aggiungiGara.php">Crea nuove gare</a></p>
-        </dd>
-        <dt>
-          <h2>Risultati</h2>
-        </dt>
-        <dd>
-          <p><num-risultati /></p>
-          <p><a href="../../php/admin/aggiungiRisultatiNoJs.php">Aggiungi risultati alle gare concluse</a></p>
-        </dd>
-      </dl>
-    </nav>
-  </main>
-  <footer>
-    <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
-    <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
-    <!-- cambiare src dopo aver validato -->
-    boh info varie su noi che non ricordo quali fossero ma si posso aggiungere
-  </footer>
+    <main>
+      <nav>
+        <dl id="db-cards">
+          <dt>
+            <h2>Cavalli</h2>
+          </dt>
+          <dd>
+            <p><num-cavalli /></p>
+            <p><a href="../../php/Admin/gestisciCavalli.php">Gestici i cavalli</a></p>
+          </dd>
+        </dl>
+          <dt>
+            <h2>Gare</h2>
+          </dt>
+          <dd>
+            <p><num-gare /></p>
+            <p><a href="../../php/admin/aggiungiGara.php">Crea nuove gare</a></p>
+          </dd>
+          <dt>
+            <h2>Risultati</h2>
+          </dt>
+          <dd>
+            <p><num-risultati /></p>
+            <p><a href="../../php/admin/aggiungiRisultatiNoJs.php">Aggiungi risultati alle gare concluse</a></p>
+          </dd>
+        </dl>
+      </nav>
+    </main>
+    <footer>
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
+      <div id="copyright">
+        <p>
+          Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte
+          tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi
+          aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la
+          tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non
+          più sul pavimento? Ma di cosa stai parlando?
+        </p>
+        <div id="authors">
+          <p>I tuoi padroni:</p>
+          <ul>
+            <li>Cecio</li>
+            <li>Dam</li>
+            <li>Martz</li>
+            <li>Sam</li>
+          </ul>
+        </div>
+      </div>
+      <img id="img-valid-code" src="../../images/valid-xhtml10.png" alt="HTML valido" />
+      <img id="img-valid-css" src="../../images/vcss-blue.gif" alt="CSS valido" />
+    </footer>
+  </div>
 </body>
 
 </html>
