--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -3,12 +3,11 @@
 
 <head>
   <title>Gestisci cavalli - Ippodromo NO₂¯</title>
-  <meta name="title" content="aggiungi-gara" />
+  <meta name="title" content="Gestisci cavalli - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css"
-    media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
@@ -23,6 +22,7 @@
           <li lang="en"><a href="admin.php">Dashboard</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
         </ul>
@@ -33,7 +33,7 @@
       </ul>
     </div>
     <main>
-      <a href="../../html/admin/aggiungiCavallo.html">Inserisci un nuovo cavallo</a>
+      <a href="../admin/aggiungiCavallo.php">Inserisci un nuovo cavallo</a>
       <!-- volendo si puó nascondere/visualizzare con js invece che cambiare pagina -->
       <table>
         <thead>
@@ -49,7 +49,7 @@
       </table>
     </main>
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Bella amico, grazie per fare il lavoro pesante al posto nostro. Ovviamente questo è tutto volontariato da parte tua, quindi non pagheremo nulla, ma come sempre sappi che la ricompensa più grande è sempre il sorriso di chi aiuti, quindi ecco a te <abbr title="Emoticon sorridente">:)</abbr>. Come? Vuoi sapere dove abbiamo nascosto la tua famiglia? E vorresti anche uscire dalla cantina, poter mangiare come si deve, e dormire su di un letto e non più sul pavimento? Ma di cosa stai parlando?
