--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Login - Ippodromo NO₂¯</title>
-  <meta name="title" content="Login - Ippodromo" />
+  <meta name="title" content="Login - Ippodromo NO₂¯" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta charset="UTF-8">
@@ -26,6 +26,7 @@
           <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li>Login</li>
           <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
         </ul>
@@ -47,7 +48,7 @@
     </main>
     
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le
