--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -9,8 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="../../style/small.css"
-    media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="../../style/small.css" media="handheld, screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
 </head>
 
@@ -28,7 +27,7 @@
           <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
           <li>Cavalli</li>
-          <li><a href="../chi_siamo.php">Chi siamo</a></li>
+          <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <admin />
           <autenticazione />
         </ul>
@@ -43,7 +42,7 @@
       <lista-cavalli />
     </main>
     <footer>
-      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo" />
+      <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
           Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
