fix color accessibility

--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
         </dd>
         <dt>Valuta virtuale: Cookies</dt>
         <dd>
-          <img src="images/bitsquit.png" alt="Un bisotto in 8 bit, simbolo della valuta" />
+          <img src="images/bitsquit.png" class="imgContent center-element" alt="Un bisotto in 8 bit, simbolo della valuta" />
           <p>
             Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di cookies gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
